# rpg-helper

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  Trunk.toml  flake.nix  index.html  notes.txt  todo.md
cli/: Cargo.toml
cli/src/: cmd.rs  main.rs
cli/src/cmd/: data.rs
cli/src/cmd/data/: set.rs
client/: .env  Cargo.toml  build.rs  index.html  style.css  todo.md
client/data/test/basic/: character.json
client/src/: api.rs  app.rs  client.rs  data.rs  error.rs  gui.rs  lib.rs  main.rs  router.rs  store.rs
client/src/api/: data_api.rs  schema.rs  types.rs  user_api.rs
client/src/app/: context.rs  gui.rs  router.rs
client/src/app/context/: focus.rs
client/src/app/gui/: atoms.rs  molecules.rs  pages.rs
client/src/app/gui/atoms/: display.rs  icon.rs  input.rs  list.rs  tooltip_wrapper.rs
client/src/app/gui/atoms/input/: autocomplete_suggestions.rs  conditional_input.rs  equation_input.rs  searchbar.rs  tag_input.rs
client/src/app/gui/molecules/: input.rs  navbar.rs  tooltip.rs
client/src/app/gui/molecules/input/: list_editor.rs  panel_editors.rs  variable_list.rs
client/src/app/gui/molecules/tooltip/: helper_tooltip.rs  page_preview_tooltip.rs
client/src/app/gui/organisms/: input.rs
client/src/app/gui/organisms/input/: date_spec_editor.rs
client/src/app/gui/pages/: editor.rs
client/src/app/gui/pages/editor/: display.rs  editor_bar.rs  ruleset.rs
client/src/app/gui/pages/general/: home.rs
client/src/app/store/: user.rs
client/src/data/: file_storage.rs
client/src/gui/: contexts.rs  display.rs
client/src/gui/contexts/: data_context.rs  game.rs  theme.rs  user.rs
client/src/gui/contexts/style/: theme.rs
client/src/gui/display/: atoms.rs  molecules.rs  organisms.rs  pages.rs
client/src/gui/display/atoms/: button.rs  character_portrait.rs  collapsable_headers.rs  colored_panel.rs  form_input.rs  hamburger_menu.rs  image.rs  loader.rs  loading.rs  logo.rs  panel.rs  profile.rs  scroll_div.rs  table.rs  tooltip.rs
client/src/gui/display/molecules/: character_details.rs  profile_card.rs  tabbed_pane.rs  wiki.rs
client/src/gui/display/organisms/: image_menu.rs  nav_bar.rs  searchable_gallery.rs  wiki_editor.rs
client/src/gui/display/organisms/editors/: character_template_editor.rs  type_editor.rs  wiki_editor.rs
client/src/gui/display/pages/: character_creator.rs  character_viewer.rs  dashboard.rs  editors.rs  error_pages.rs  home.rs  page_not_found.rs  ruleset_creator.rs  user.rs
client/src/gui/display/pages/editors/: ruleset.rs
client/src/gui/display/pages/generic/: dashboard.rs  error_pages.rs  home.rs
client/src/gui/display/pages/sheets/: character_details.rs
client/src/gui/display/pages/viewers/: ruleset.rs
client/src/model/: schema.rs  types.rs
client/src/model/data_model/: network.rs  primatives.rs  storage.rs
client/src/model/data_model/network/: character.rs  ruleset.rs  types.rs  values.rs  wiki.rs
client/src/model/data_model/primatives/: input.rs  types.rs  values.rs  wiki.rs
client/src/model/data_model/primatives/types/: meta.rs
client/src/model/data_model/primatives/values/: list.rs  modifier.rs  number.rs
client/src/model/data_model/storage/: character.rs  game.rs  intermediate_view.rs  location.rs  ruleset.rs  setting.rs  types.rs  values.rs  view_context.rs  wiki.rs
github/: Architecture.md  Roadmap.md
old-client-code/src/: main.rs  router.rs
old-code/v1/: Cargo.toml
rpg-helper/: Cargo.toml
rpg-helper/src/: api.rs
rpg-helper/src/api/: data.rs  database.rs  display.rs  parse.rs  rpg.rs  wiki.rs
rpg-helper/src/api/data/: attribute.rs  conditional.rs  context.rs  effect.rs  equation.rs  error.rs  evaltree.rs  modifier.rs  tag.rs  template.rs
rpg-helper/src/api/display/: error.rs  icon.rs  layout.rs  style.rs
rpg-helper/src/api/display/layout/: panel.rs  sheet.rs
rpg-helper/src/api/display/style/: color.rs  decoration.rs  font.rs  theme.rs
rpg-helper/src/api/parse/: json.rs
rpg-helper/src/api/parse/json/: data.rs  rpg.rs
rpg-helper/src/api/parse/json/data/: conditional.rs  effect.rs  equation.rs  modifier.rs
rpg-helper/src/api/parse/json/rpg/: ruleset.rs
rpg-helper/src/api/rpg/: ability.rs  character.rs  creation.rs  dice.rs  event.rs  game.rs  input.rs  inventory.rs  player.rs  ruleset.rs  timeline.rs
rpg-helper/src/api/wiki/: error.rs  name.rs  page.rs  syntax.rs
rpg-helper/tests/parse/json/ruleset/: simple.json
server/: .gitignore  Cargo.toml
server/src/: api.rs  config.rs  database.rs  lib.rs  main.rs  model.rs  server.rs
server/src/api/: handlers.rs  jwt_auth.rs  schema.rs  types.rs
server/src/api/handlers/: login.rs  logout.rs  register.rs  user.rs  user_files.rs
server/src/api/model/: data_model.rs  types.rs
server/src/database/: model.rs  user.rs
server/src/model/: core.rs  data_model.rs  store.rs  types.rs
server/src/model/data_model/: network.rs  primatives.rs  storage.rs
server/src/model/data_model/primatives/: input.rs  location.rs  modifier.rs  permissions.rs  types.rs  values.rs  wiki.rs
server/src/model/data_model/primatives/types/: boolean.rs  die_roll.rs  enumeration.rs  equation.rs  meta.rs  modifier.rs  number.rs
server/src/model/data_model/primatives/values/: boolean.rs  die_roll.rs  enumeration.rs  list.rs  meta.rs  modifier.rs  number.rs
server/src/model/data_model/storage/: character.rs  game.rs  intermediate_view.rs  location.rs  ruleset.rs  setting.rs  timeline.rs  types.rs  values.rs  view_context.rs  wiki.rs
server/src/old-model/data_model/primatives/types/: die_roll.rs  list.rs
server/src/old-model/data_model/storage/: wiki.rs
src/: api.rs  data.rs  error.rs  gui.rs  lib.rs  main.rs  model.rs  network.rs  syntax.rs  util.rs
src/api/: attributes.rs  data.rs  database.rs  dataset.rs  display.rs  parse.rs  rpg.rs  tags.rs  wiki.rs
src/data/: character_data.rs  dice.rs  equation.rs  file_storage.rs  indexes.rs  meta_type.rs  modifier.rs  setting.rs  timeline.rs
src/gui/: client.rs  display.rs  style.rs
src/model/: core.rs  database.rs  effect.rs  network.rs  storable.rs  store.rs
utils/: Cargo.toml
(+173 files in other folders)
