[package]
name = "rpg-helper"
authors = ["Landon Kump"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
gloo = { version = "0.11", features = [] }
reqwasm = "0.5"
reqwest = { version = "0.12", features = ["multipart", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "macros"] }
tokio = "1.34"
uuid = { version="1.8.0", features=["serde","v4"] }
validator = { version="0.18.1", features = ["derive"] }
yew = { version = "0.21.0",  features = ["csr"] } # Frontend Webdev
yewdux = "0.10.0"
yew-router = "0.18"
yew_icons = { version = "0.8.0", features = ["LucideMenu", "FeatherChevronDown", "FontAwesomeSolidXmark", "LucideLayoutDashboard", "BootstrapGear", "LucideHammer", "LucideMountainSnow", "BootstrapJournalText", "BootstrapMotherboard", "BootstrapPalette", "OcticonsPersonAdd16", "BootstrapBoxArrowInLeft", "BootstrapReception0", "BootstrapReception1", "BootstrapReception2", "BootstrapReception3", "BootstrapReception4", "BootstrapSearch", "FeatherFeather", "FeatherServer", "FeatherCornerDownRight", "BootstrapPersonPlus", "BootstrapCheckAll", "BootstrapPersonDashFill", "HeroiconsOutlinePencilSquare", "OcticonsInfo24", "LucideCircleSlashed", "BootstrapSortAlphaDown", "BootstrapSortAlphaUp", "LucideClock4", "FeatherPlusSquare", "FeatherFolder"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["DataTransfer", "DragEvent"] }
once_cell = "1.19.0"
futures = "0.3.30"
