[package]
name = "rpg-helper-web-client"
authors = ["Landon Kump"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
rpg-helper = { path = "../rpg-helper" }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "macros"] }
validator = { version = "0.20", features = ["derive"] }
wasm-logger = "0.2.0"
web-sys = "0.3.77"
yew = { version = "0.21.0", features = ["csr"] }
yewdux = "0.11.0"
yew-router = "0.18"