[package]
name = "rpg-helper"
authors = ["Landon Kump"]
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
serde = { workspace = true }
serde_json = { workspace = true }
stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "macros"] }
toml = "0.9.4"
once_cell = "1.19.0"

[lib]
name = "rpg_helper"
path = "src/lib.rs"