[package]
name = "rpg-helper-server"
authors = ["Landon Kump"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4" # Backend for Webserver
actix-cors = "0.7"
anyhow = "1"
bcrypt = "0.15" # A hashing algo for password salting
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.0"
jsonwebtoken = "9.3.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = { version = "0.34.7" } # Embedded database, so we don't have to deal with cloud servers / setting up SQL
toml = "0.8"
uuid = { version="1.8.0", features=["serde","v4"] }